{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 123,
  "lineage": "8a4a02c0-9ede-87c7-8c3f-7516b3694f0e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217981289470:security-group/sg-01220044dff86595d",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-01220044dff86595d",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0b6fbcbc3325f3972"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217981289470:vpc/vpc-0b6fbcbc3325f3972",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bb8fba821687be6b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-6041d31a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6fbcbc3325f3972",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a1cfdd0f88c6368",
            "owner_id": "217981289470",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:217981289470:loadbalancer/yahel-bookshelf",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "yahel-bookshelf-196979016.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "yahel-bookshelf",
            "idle_timeout": 60,
            "instances": [
              "i-09676b69ecf624e36"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "yahel-bookshelf",
            "security_groups": [
              "sg-01220044dff86595d",
              "sg-0f039814c933e52fb"
            ],
            "source_security_group": "217981289470/default",
            "source_security_group_id": "sg-01220044dff86595d",
            "subnets": [
              "subnet-01392d4d1ca54c464",
              "subnet-03b0f4559b28f49c6",
              "subnet-08fa467e05a44f61e",
              "subnet-0c83d7ec494b58d20",
              "subnet-0f1ea0238381e3976",
              "subnet-0f95de4ef5aff3fe6"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.book-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "book-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217981289470:security-group/sg-0f039814c933e52fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f039814c933e52fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ELB_bookselfe_sg",
            "name_prefix": "",
            "owner_id": "217981289470",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6fbcbc3325f3972"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217981289470:security-group/sg-00a890411eff08272",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a890411eff08272",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "bookstack-sg",
            "name_prefix": "",
            "owner_id": "217981289470",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6fbcbc3325f3972"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1381321236",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a890411eff08272",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.rds-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-225802859",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00a890411eff08272",
            "self": true,
            "source_security_group_id": "sg-00a890411eff08272",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.rds-sg"
          ]
        }
      ]
    }
  ]
}